# agx

./: .gitignore  Dockerfile  compose.yaml  pyproject.toml
.continue/rules/: overview.md
docs/: architecture_goal.md
notebooks/: Test TF.ipynb  Test Torch.ipynb  Test ViT.ipynb  Test.ipynb
scripts/: tiff2bmp.py  train.py
venvs/common/: pyproject.toml
