[project]
name = "common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agnostix-core",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "nbformat>=5.10.4",
]

[tool.uv.sources]
agnostix-core = { path = "../../packages/agnostix-core" }
