[project]
name = "common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agx-core",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "nbformat>=5.10.4",
]

[tool.uv.sources]
agx-core = { path = "../../packages/agx-core" }
